--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-Us">
     <head>
+        <link rel="stylesheet" href="styles/styles.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Guilherme Margoni de Medeiros | WWD 130</title>
+        <meta name="description" content="">
+        <meta name="author" content="Guilherme Medeiros">
     </head>
     <body>
         <header>
@@ -18,6 +21,11 @@
             <img src="images/profile.jpg" alt="Guilherme Margoni de Medeiros" width="200">
             <p>I'm Guilherme, I'm 28 years old, I'm the father of a beautiful 4-year-old boy, Lucca, I'm married to Vitória, and I'm a member of the Church of Jesus Christ of Latter-day Saints.</p>
         </main>
+        <aside>
+            <h2>Brasil</h2>
+            <img src="images/brasil.jpeg">
+            <p> Brazil is the soccer land, you can hear about soccer all the time, and basically everywhere.</p>
+        </aside>
         <footer>
             <p>
                 &copy;2024 Guilherme Margoni de Medeiros São Paulo, Brasil
