W03: Enhancing Your Course Home Page

--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting">Rafting Site Plan</a>
+                <a href="https://www.linkedin.com/in/guilherme-margoni-de-medeiros-222406169/">LinkedIn</a>
+                <a href="https://www.facebook.com">Facebook</a>
             </nav>
         </header>
         <main>
             <h1>Guilherme Margoni de Medeiros | WWD 130</h1>
             <img src="images/profile.jpg" alt="Guilherme Margoni de Medeiros" width="200">
             <p>I'm Guilherme, I'm 28 years old, I'm the father of a beautiful 4-year-old boy, Lucca, I'm married to Vitória, and I'm a member of the Church of Jesus Christ of Latter-day Saints.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" target="_blank">Pliladelphia Pennsylvania Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Brasil</h2>
-            <img src="images/brasil.jpeg">
+            <img alt="Image of Brasil!" src="images/brasil.jpeg">
             <p> Brazil is the soccer land, you can hear about soccer all the time, and basically everywhere.</p>
         </aside>
         <footer>
@@ -32,4 +39,5 @@
             </p>
         </footer>
     </body>
+    <!-- Last Modified 29/06/2024 -->
 </html>
