W04: Using CSS Flex and Grid on the Course Home Page

--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
                 <a href="https://www.facebook.com">Facebook</a>
             </nav>
         </header>
-        <main>
-            <h1>Guilherme Margoni de Medeiros | WWD 130</h1>
-            <img src="images/profile.jpg" alt="Guilherme Margoni de Medeiros" width="200">
-            <p>I'm Guilherme, I'm 28 years old, I'm the father of a beautiful 4-year-old boy, Lucca, I'm married to Vitória, and I'm a member of the Church of Jesus Christ of Latter-day Saints.</p>
-            <ul class="box">
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" target="_blank">Pliladelphia Pennsylvania Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
-            </ul>
-        </main>
-        <aside class="box">
-            <h2>Brasil</h2>
-            <img alt="Image of Brasil!" src="images/brasil.jpeg">
-            <p> Brazil is the soccer land, you can hear about soccer all the time, and basically everywhere.</p>
-        </aside>
+        <div class="grid">
+            <main>
+                <h1>Guilherme Margoni de Medeiros | WWD 130</h1>
+                <img src="images/profile.jpg" alt="Guilherme Margoni de Medeiros" width="200">
+                <p>I'm Guilherme, I'm 28 years old, I'm the father of a beautiful 4-year-old boy, Lucca, I'm married to Vitória, and I'm a member of the Church of Jesus Christ of Latter-day Saints. I strive to develop myself in the technology field, to become an increasingly qualified professional, and to seek remote work opportunities abroad. I believe in Christ and know that through hard work, I can become better every day.</p>
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" target="_blank">Pliladelphia Pennsylvania Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" target="_blank">Berlin Germany Temple</a></li>
+                </ul>
+            </main>
+            <aside class="box">
+                <h2>Brasil</h2>
+                <img alt="Image of Brasil!" src="images/brasil.jpeg">
+                <p> Brazil is the soccer land, you can hear about soccer all the time, and basically everywhere.</p>
+            </aside>
+        </div>
         <footer>
             <p>
                 &copy;2024 Guilherme Margoni de Medeiros São Paulo, Brasil
