--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,11 +33,13 @@
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/raf1.jpg" alt="Rafting adventure 1">
-                <img src="images/raf2.jpg" alt="Rafting adventure 2">
-                <img src="images/raf3.jpg" alt="Rafting adventure 3">
-                <img src="images/raf4.jpg" alt="Rafting adventure 4">
-                <img src="images/raf5.jpg" alt="Rafting adventure 5">
+                <div  class="grid">
+                    <img src="images/raf1.jpg" alt="Rafting adventure 1">
+                    <img src="images/raf2.jpg" alt="Rafting adventure 2">
+                    <img src="images/raf3.jpg" alt="Rafting adventure 3">
+                    <img src="images/raf4.jpg" alt="Rafting adventure 4">
+                    <img src="images/raf5.jpg" alt="Rafting adventure 5">
+                </div>
             </section>
         </main>
         <footer>
