--- a/quiz.html
+++ b/quiz.html
@@ -46,7 +46,7 @@
                         <input type="number" id="q4" name="q4" min="0" max="100" />
                     </fieldset>
                     <div class="button-div">
-                        <button>Submit Quiz</button>
+                        <button type="submit">Submit Quiz</button>
                     </div>
                 </form>
 
